# python-simple-secrets-manager

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
arch/: pendulum_schema.py
changelog/0.1.0/: index.html
changelog/0.1.1/: index.html
cli/: index.html
docs/: cli.md  index.md  quickstart.md  tutorial.ipynb
docs/background/: security.md
docs/changelog/: 0.1.0.md  0.1.1.md  0.1.2.md
docs/todo/: notes.md
docs/tutorial/: package.ipynb
pssm/: cli.py
quickstart/: index.html
search/: search_index.json
ssm/: __init__.py  cli.py  core.py  env.py  setup.py
ssm/sep/: system.py  term.py
ssm/validate/: data.py
stm/: __init__.py  cli.py  core.py  handler.py  io.py  schema.py  setup.py
stm/sep/: io.py  term.py
test/: test_generic.py  test_secrets_keep.py
todo/design/: index.html
todo/features/: index.html
todo/notes/: index.html
todo/security/: index.html
tutorial/: index.html
