[tool.poetry]
name = "simple-secrets-manager"
packages = [{ include = "ssm" }]
version = "0.1.0"
description = "A simple secrets manager."
readme = "README.md"
repository = "https://github.com/harttraveller/simple-secrets-manager"
documentation = "https://harttraveller.com/posts/docs.simple-secrets-manager"
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
maintainers = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]

[tool.poetry.dependencies]
python = ">3.9.7, <=3.12"
click = "^8.1.7"
rich = "^13.6.0"
rich-click = "^1.7.1"
toml = "^0.10.2"
pick = "^2.2.0"
pendulum = "^2.1.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
secrets = "ssm.cli:entry"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
